# svid

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  STITCH.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.codex/: config.toml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum
docs/: FIGMA-MCP-CLAUDE-SETUP.md  SSvid_Download_Options_Dialog_Contract_Fix_Plan_v1.3.md  SSvid_Download_Options_Dialog_PRD_v1.1.md  SSvid_Home_Download_Manager_UI_Spec.md  SSvid_Home_Download_Manager_UI_Spec_v1.1.md  SSvid_v2_1_FloatingCapture_Implementation_Status.md  SSvid_v2_1_FloatingCapture_Spec.md  SSvid_v2_2_FloatingCapture_Improvement_Spec.md  SSvid_v2_2_FloatingCapture_Stitch_Brief.md  SSvid_v2_Design_Spec.md  SSvid_v2_Implementation_Roadmap.md  Svid_Download_Options_Dialog_Contract_Fix_Plan_v1.3.md  Svid_Download_Options_Dialog_PRD_v1.1.md  Svid_Home_Download_Manager_UI_Spec.md  Svid_Home_Download_Manager_UI_Spec_v1.1.md  Svid_v2_1_FloatingCapture_Implementation_Status.md  Svid_v2_1_FloatingCapture_Spec.md  Svid_v2_2_FloatingCapture_Improvement_Spec.md  Svid_v2_2_FloatingCapture_Stitch_Brief.md  Svid_v2_Design_Spec.md  accessibility_qa.md  (+19 more)
native/: Cargo.toml
native/src/: api.rs  context.rs  frb_generated.rs  lib.rs  telemetry.rs
native/src/download/: config.rs  engine.rs  hls_engine.rs  manager.rs  mod.rs  progress.rs  segmented_engine.rs
native/src/filesystem/: metadata.rs  mod.rs  scanner.rs
native/src/ytdlp/: executor.rs  mod.rs  parser.rs
(+1477 files in other folders)
