[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Sentry telemetry — optional, gated behind `telemetry` feature.
# default-features=false drops `transport-default` (which pulls reqwest+rustls
# duplicates) since we already have reqwest as a primary dep. The
# `transport` feature uses the existing reqwest client; `anyhow` and
# `panic` integrations come as separate features. Verify exact name set
# during impl against the pinned sentry-rust version.
sentry = { version = "0.34", optional = true, default-features = false, features = ["anyhow", "panic", "backtrace", "contexts", "transport"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
flutter_rust_bridge_codegen = "2"

[features]
default = []
# Enable Sentry telemetry. CI release builds turn this on; local dev cycles
# may skip it to keep `cargo check` fast. Without this feature, all
# `init_telemetry` / `instrumented_call` calls become compile-time no-ops.
telemetry = ["dep:sentry"]
